testsuite/escript/spread/syntax-err-1.err
syntax-err-1.src:5:24: error: In call to 'bar': Spread operator can only be used for arguments on or after the formal rest parameter.