testsuite/escript/spread/syntax-err-1.src
var foo;
function bar( a, b, c, d, unused args ...) endfunction

// errors nice
bar( a:=1, d:=2, b:=4, foo... );
